--- a/data/project.json
+++ b/data/project.json
@@ -4,7 +4,13 @@
     "publish_sha": "",
     "publish_iso_date": ""
   },
-  "users": [],
+  "users": [
+    {
+      "login_name": "rodriguezalzza",
+      "avatar_url": "https://avatars.githubusercontent.com/u/147187591?v=4",
+      "admin": true
+    }
+  ],
   "project": {
     "github_org": "rodriguezalzza",
     "is_private": false,
@@ -22,6 +28,27 @@
       "tags": []
     },
     "created_at": "2025-06-12T01:41:11.232Z",
-    "updated_at": "2025-06-12T01:41:11.232Z"
-  }
+    "updated_at": "2025-06-12T01:41:11.232Z",
+    "generate_pages_site": true
+  },
+  "annotations": {},
+  "events": {},
+  "eventOrder": [],
+  "pages": {
+    "b41a1674-ac58-4cef-9379-65c29b933251": {
+      "content": [],
+      "created_at": "2025-06-12T01:41:11.260Z",
+      "created_by": "rodriguezalzza",
+      "title": "Iskonawa vocabulary",
+      "updated_at": "2025-06-12T01:41:11.260Z",
+      "updated_by": "rodriguezalzza",
+      "autogenerate": {
+        "enabled": false,
+        "type": "home"
+      }
+    }
+  },
+  "pageOrder": [
+    "b41a1674-ac58-4cef-9379-65c29b933251"
+  ]
 }
