--- a/data/project.json
+++ b/data/project.json
@@ -14,12 +14,12 @@
   "project": {
     "github_org": "rodriguezalzza",
     "is_private": false,
-    "title": "Iskonawa vocabulary",
-    "description": "xxx",
+    "title": "Iskonawa",
+    "description": "This project aims to develop an exhibition featuring culturally significant Iskonawa vocabulary drawn from language recordings in the Iskonawa Language Collection at the Archive of the Indigenous Languages of Latin America (AILLA). ",
     "language": "en",
     "slug": "Artisan",
     "creator": "rodriguezalzza",
-    "authors": "noely",
+    "authors": "Noely Campos Barbarán",
     "media_player": "avannotate",
     "auto_populate_home_page": false,
     "additional_users": [],
@@ -28,7 +28,7 @@
       "tags": []
     },
     "created_at": "2025-06-12T01:41:11.232Z",
-    "updated_at": "2025-07-08T01:23:10.626Z",
+    "updated_at": "2025-07-21T16:30:07.303Z",
     "generate_pages_site": true
   },
   "annotations": {},
