--- a/data/project.json
+++ b/data/project.json
@@ -23,19 +23,13 @@
     "authors": "Noely Campos Barbarán",
     "media_player": "avannotate",
     "auto_populate_home_page": false,
-    "additional_users": [
-      {
-        "login_name": "llilasbenson",
-        "avatar_url": "https://avatars.githubusercontent.com/u/26462551?v=4",
-        "admin": false
-      }
-    ],
+    "additional_users": [],
     "tags": {
       "tagGroups": [],
       "tags": []
     },
     "created_at": "2025-06-12T01:41:11.232Z",
-    "updated_at": "2025-07-24T15:47:09.525Z",
+    "updated_at": "2025-07-24T15:48:22.013Z",
     "generate_pages_site": true
   },
   "annotations": {},
